<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">



    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_bg"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WelcomeTitle1Xml"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/WelcomeTitle2Xml"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ReturnLoginXml"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textColor="@color/green"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NameXml"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/EnterNameXml"
            android:background="@drawable/background_shape"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmailXml"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/EnterEmailXml"
            android:background="@drawable/background_shape"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PasswordXml"
            android:paddingTop="5dp"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/edtPw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/EnterPasswordXml"
            android:background="@drawable/background_shape"
            android:layout_marginBottom="20dp"/>


        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/Sign_up_txt_Xml"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>







</RelativeLayout>