<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/img_bg"
        android:orientation="vertical"
        android:paddingStart="15dp"
    android:layout_marginTop="80dp"
        android:paddingEnd="30dp"
    android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ForgotPasswordXml"
            android:layout_gravity="center_horizontal"
            android:textSize="40sp"
            android:layout_marginBottom="40dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NewPasswordXml"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
  />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmailXml"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp"/>
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/EnterEmailXml"
            android:background="@drawable/background_shape"
            android:layout_marginBottom="10dp"/>




        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_grey"
            android:text="@string/SendXml"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>






